# ros2-serial-manager

./: .gitignore  README.md
src/interface_pkg/: CMakeLists.txt
src/interface_pkg/msg/: Corners.msg  DriveMsg.msg  SerialMsg.msg
src/serial_listener_pkg/: CMakeLists.txt  package.xml
src/serial_listener_pkg/src/: main.cpp
src/serial_manager_pkg/: CMakeLists.txt  package.xml
src/serial_manager_pkg/launch/: all_run.launch.py  serial_manager.launch.py
src/serial_manager_pkg/src/: new_serial_manager.cpp  new_serial_manager.hpp  serial_manager.cpp  serial_manager.hpp
src/serial_user_pkg/: CMakeLists.txt  package.xml
src/serial_user_pkg/src/: listen.cpp  talk.cpp
